adjusting the play.html page

--- a/play.html
+++ b/play.html
@@ -1,7 +1,11 @@
 <html>
 <head>
 <title>run my python files</title>
-<?PHP
+<!-- <?PHP
 echo shell_exec("midas_v1.py");
-?>
+?> -->
 </head>
+<body>
+"Play Page"
+</body>
+</html>
